# SecureComm

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  SECURITY.md  USAGE.md  loc_counter.py  sample_pdf_extract.txt
src/securecomm/: __init__.py  __main__.py  constants.py  errors.py  main.py
src/securecomm/cli/: commands.py  formatter.py  interactive.py  parser.py
src/securecomm/crypto/: __init__.py  file_crypto.py  hybrid.py  kdf.py  keys.py  password_crypto.py  primitives.py  randoms.py  signing.py
src/securecomm/services/: __init__.py  audit_service.py  file_service.py  key_service.py  message_service.py  vault_service.py
src/securecomm/utils/: encoding.py  files.py  validation.py
tests/: test_securecomm_workflows.py
